# HP8753-Companion

./: AUTHORS  COPYRIGHT  Makefile.am  README.md  VERSION  configure.ac
GPIB-Linux.driver/: dkms.conf  gpib.conf  installGPIBdriver.on.RPI
GPIB-Linux.driver/Systemd/: 59-linux-gpib-firmware.rules  60-linux-gpib-adapter.rules  61-linux-gpib-firmware.rules  98-gpib-generic.rules  linux-gpib-config-systemd  linux-gpib-config@.service  linux-gpib-firmware-loader-agilent82357a@.service  linux-gpib-firmware-loader-agilent82357b@.service  linux-gpib-firmware-loader-ni@.service
config_m4/: versioning.m4
data/: .Makefile.am.swp  Makefile.am
data/applications/: hp8753.desktop
help/: Makefile.am
help/C/: color.page  index.page  legal.xml  operations-cal.page  operations-calkit.page  operations-projects.page  operations-trace.page  options.page  overview.page  starting.page
include/: GPIBcomms.h  GTKplot.h  HPGLplot.h  calibrationKit.h  hp8753.h  hp8753comms.h  messageEvent.h  smithChartPS.h  widgetID.h
src/: GPIB_interface.c  GPIBcommsThread.c  GPIBinterface.c  GTKmainDialog.c  GTKnoteCalKit.c  GTKnoteCalibration.c  GTKnoteColor.c  GTKnoteData.c  GTKnoteGPIB.c  GTKnoteOptions.c  GTKnoteTraces.c  GTKplot.c  GTKplotMarkers.c  GTKprint.c  GTKrenameDialog.c  GTKrenameDialogWidgets.c  GTKutility.c  GTKwidgetCallbacks.c  HP8753_S2P.c  HP8753comms.c  HP8753setupAndCal.c  HP_FORM1toFORM3.c  HPicon.c  HPlogo.c  Makefile.am  PDF+PNG+SVG.c  Prologix_interface.c  USBTMC_interface.c  catalogWidgets.c  databaseSaveAndRestore.c  hp8753-GTK4.c  hp8753-GTK4.xml  hp8753.c  hp8753.cmb  hp8753.css  hp8753.glade  hp8753.ui  hp8753_S2P.c  hp8753comms.c  hp8753setupAndCal.c  (+16 more)
