
desktopdir = $(prefix)/share/applications
desktop_DATA = applications/hp8753.desktop

pixmapsdir = $(prefix)/share/pixmaps
pixmaps_DATA = pixmaps/hp8753.svg

fontdir = $(prefix)/share/fonts/hp8753/
font_DATA = fonts/NotoSansMono-ExtraLight.ttf fonts/NotoSansMono-Light.ttf

install-data-hook:
	 fc-cache $(prefix)/share/fonts/hp8753


