@YELP_HELP_RULES@
HELP_ID = hp8753
HELP_FILES = index.page  legal.xml  operations-cal.page	operations-trace.page operations-calkit.page overview.page  starting.page color.page operations-projects.page options.page 

HELP_MEDIA = media/data.png media/HP8753C.png media/HP8753-GPIBsetup.png media/HP8753-CalKit.png media/options.png media/setup+calibration.png media/trace.png media/color.png media/project.png media/project-rename.png media/rename.png

